# claude-swtich-application

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  spec.md
.github/workflows/: release.yml
src/: auto_switch.rs  backup.rs  cli.rs  dashboard.rs  doctor.rs  dryrun.rs  error.rs  isolation.rs  jsonio.rs  links.rs  lock.rs  logging.rs  main.rs  master.rs  output.rs  paths.rs  profile.rs  provider.rs  settings.rs  state.rs  symlinks.rs
src/commands/: alias.rs  auto_switch.rs  auto_switch_tick.rs  dashboard.rs  default.rs  doctor.rs  launch.rs  link.rs  list.rs  master.rs  migrate.rs  mod.rs  override_.rs  provider.rs  refresh.rs  rename.rs  rm.rs  save.rs  setup.rs  share_skill.rs  status.rs  switch.rs  tui.rs  uninstall.rs  usage.rs  wrapper.rs
src/keychain/: macos.rs  mock.rs  mod.rs
src/shell/: bash.rs  mod.rs  zsh.rs
src/usage/: ccusage.rs  limits.rs  mod.rs  session_tags.rs  stats_cache.rs
tests/: cli.rs
