[package]
name = "cs"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Michael Chen <michael@zergai.com>"]
description = "Claude Code account switcher with master-profile sharing and live usage TUI"
license = "MIT"
repository = "https://github.com/mchen04/claude-swtich-application"
default-run = "cs"

[[bin]]
name = "cs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
tempfile = "3"
fs2 = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
crossterm = "0.27"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
